k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-app-service
spec:
  type: ClusterIP          # Service accessible uniquement à l'intérieur du cluster
  selector:
    app: node-app          # Lie ce service aux pods avec label app=node-app
  ports:
  - protocol: TCP
    port: 80               # Port exposé à l'intérieur du cluster
    targetPort: 3000       # Port sur lequel tourne ton application dans le pod
